<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/firstPageId"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/btnHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="15dp"
        android:background="@null"
        android:src="@drawable/ic_access_time_black_24dp"
        android:contentDescription="@string/showHistory" />

    <ImageButton
        android:id="@+id/btnComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="15dp"
        android:background="@null"
        android:src="@drawable/ic_comment_black_24dp"
        android:contentDescription="@string/createComment" />

    <Button
        android:id="@+id/btnRemoveHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:text="@string/Delete" />

    <Button
        android:id="@+id/btnEventInCalendar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/Send" />

    <ImageView
        android:id="@+id/imgMood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:srcCompat="@drawable/smiley_super_happy"
        android:contentDescription="@string/moodPicture" />

</RelativeLayout>



